# STEPP-Code

./: .gitignore  README.md  standalone_inference.py
docs/: ROS2_MIGRATION.md
stepp_ros2_humble/: CMakeLists.txt  package.xml
stepp_ros2_humble/config/: model_config.yaml
stepp_ros2_humble/launch/: STEPP_launch.py
stepp_ros2_humble/scripts/: depth_projection_node.py  inference_node.py
